--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>    
     <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
-
-    <title>Scrimba | Random Password Generator</title>
 </head>
 
 <body>
@@ -20,9 +12,9 @@
                 <h2 class="supportingTitle">Never use an insecure password again.</h2>
                 <span id="password-slider-text">Length: <label for="slider" id="sliderNumber">8</label></span>
 
-                <input type="range" min="8" max="12" value="8" class="slider" id="slider" name="slider"></input>
+                <input type="range" min="8" max="15" value="8" class="slider" id="slider" name="slider"></input>
 
-                <button class="btn" onclick="getGeneratePasswords()"><i class="fa fa-flash"></i>Generate
+                <button class="btn" onclick="getGeneratePasswords()"></i>Generate
                     passwords</button>
 
             </div>
@@ -33,24 +25,11 @@
                 </div>
                 <div class="generatedPassword" id="password2-el"><i class="fa fa-ellipsis-h" aria-hidden="true"></i>
                 </div>
-                <div class="generatedPassword" id="password3-el"><i class="fa fa-ellipsis-h" aria-hidden="true"></i>
-                </div>
-                <div class="generatedPassword" id="password4-el"><i class="fa fa-ellipsis-h" aria-hidden="true"></i>
-                </div>
                 <div id="letter-main"></div>
             </div>
         </div>
 
     </main>
-
-    <!-- FOOTER -->
-    <footer>
-        <div class="attribution">
-            <span> Project by <a href="https://scrimba.com/learn/learnjavascript/" target="_blank">Scrimba</a>.<br>
-                Coded by <a href="https://github.com/xdelmo" target="_blank">Emanuele Del Monte</a>.</span>
-        </div>
-    </footer>
-
     <script src="scripts/index.js"></script>
 </body>
 
